// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToolInput > matches snapshot with complex input 1`] = `
<div
  class="space-y-2 overflow-hidden p-4"
>
  <h4
    class="font-medium text-muted-foreground text-xs uppercase tracking-wide"
  >
    Parameters
  </h4>
  <div
    class="rounded-md bg-muted/50"
  >
    <div
      class="relative w-full overflow-hidden rounded-md border bg-base-100 text-base-content"
    >
      <div
        class="relative"
      >
        <pre
          class="overflow-hidden dark:hidden"
          style="background: hsl(var(--background)); color: hsl(var(--foreground)); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
        >
          <code
            class="font-mono text-sm"
            style="white-space: pre;"
          >
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              {
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(228, 86, 73);"
            >
              "user"
            </span>
            <span
              class="token"
              style="color: rgb(64, 121, 242);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              {
            </span>
            <span>
              

            </span>
            <span>
                  
            </span>
            <span
              class="token"
              style="color: rgb(228, 86, 73);"
            >
              "name"
            </span>
            <span
              class="token"
              style="color: rgb(64, 121, 242);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(80, 161, 79);"
            >
              "John"
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                  
            </span>
            <span
              class="token"
              style="color: rgb(228, 86, 73);"
            >
              "age"
            </span>
            <span
              class="token"
              style="color: rgb(64, 121, 242);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(183, 107, 1);"
            >
              30
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              }
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(228, 86, 73);"
            >
              "items"
            </span>
            <span
              class="token"
              style="color: rgb(64, 121, 242);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              [
            </span>
            <span>
              

            </span>
            <span>
                  
            </span>
            <span
              class="token"
              style="color: rgb(183, 107, 1);"
            >
              1
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                  
            </span>
            <span
              class="token"
              style="color: rgb(183, 107, 1);"
            >
              2
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                  
            </span>
            <span
              class="token"
              style="color: rgb(183, 107, 1);"
            >
              3
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              ]
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(228, 86, 73);"
            >
              "active"
            </span>
            <span
              class="token"
              style="color: rgb(64, 121, 242);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(183, 107, 1);"
            >
              true
            </span>
            <span>
              

            </span>
            <span />
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              }
            </span>
          </code>
        </pre>
        <pre
          class="hidden overflow-hidden dark:block"
          style="background: hsl(var(--background)); color: hsl(var(--foreground)); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
        >
          <code
            class="font-mono text-sm"
            style="white-space: pre;"
          >
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              {
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(224, 108, 117);"
            >
              "user"
            </span>
            <span
              class="token"
              style="color: rgb(97, 175, 239);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              {
            </span>
            <span>
              

            </span>
            <span>
                  
            </span>
            <span
              class="token"
              style="color: rgb(224, 108, 117);"
            >
              "name"
            </span>
            <span
              class="token"
              style="color: rgb(97, 175, 239);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(152, 195, 121);"
            >
              "John"
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                  
            </span>
            <span
              class="token"
              style="color: rgb(224, 108, 117);"
            >
              "age"
            </span>
            <span
              class="token"
              style="color: rgb(97, 175, 239);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(209, 154, 102);"
            >
              30
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              }
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(224, 108, 117);"
            >
              "items"
            </span>
            <span
              class="token"
              style="color: rgb(97, 175, 239);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              [
            </span>
            <span>
              

            </span>
            <span>
                  
            </span>
            <span
              class="token"
              style="color: rgb(209, 154, 102);"
            >
              1
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                  
            </span>
            <span
              class="token"
              style="color: rgb(209, 154, 102);"
            >
              2
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                  
            </span>
            <span
              class="token"
              style="color: rgb(209, 154, 102);"
            >
              3
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              ]
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(224, 108, 117);"
            >
              "active"
            </span>
            <span
              class="token"
              style="color: rgb(97, 175, 239);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(209, 154, 102);"
            >
              true
            </span>
            <span>
              

            </span>
            <span />
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              }
            </span>
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolInput > matches snapshot with custom className 1`] = `
<div
  class="space-y-2 overflow-hidden p-4 custom-class"
>
  <h4
    class="font-medium text-muted-foreground text-xs uppercase tracking-wide"
  >
    Parameters
  </h4>
  <div
    class="rounded-md bg-muted/50"
  >
    <div
      class="relative w-full overflow-hidden rounded-md border bg-base-100 text-base-content"
    >
      <div
        class="relative"
      >
        <pre
          class="overflow-hidden dark:hidden"
          style="background: hsl(var(--background)); color: hsl(var(--foreground)); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
        >
          <code
            class="font-mono text-sm"
            style="white-space: pre;"
          >
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              {
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(228, 86, 73);"
            >
              "param1"
            </span>
            <span
              class="token"
              style="color: rgb(64, 121, 242);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(80, 161, 79);"
            >
              "value1"
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(228, 86, 73);"
            >
              "param2"
            </span>
            <span
              class="token"
              style="color: rgb(64, 121, 242);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(183, 107, 1);"
            >
              123
            </span>
            <span>
              

            </span>
            <span />
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              }
            </span>
          </code>
        </pre>
        <pre
          class="hidden overflow-hidden dark:block"
          style="background: hsl(var(--background)); color: hsl(var(--foreground)); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
        >
          <code
            class="font-mono text-sm"
            style="white-space: pre;"
          >
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              {
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(224, 108, 117);"
            >
              "param1"
            </span>
            <span
              class="token"
              style="color: rgb(97, 175, 239);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(152, 195, 121);"
            >
              "value1"
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              ,
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(224, 108, 117);"
            >
              "param2"
            </span>
            <span
              class="token"
              style="color: rgb(97, 175, 239);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(209, 154, 102);"
            >
              123
            </span>
            <span>
              

            </span>
            <span />
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              }
            </span>
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolInput > matches snapshot with empty input 1`] = `
<div
  class="space-y-2 overflow-hidden p-4"
>
  <h4
    class="font-medium text-muted-foreground text-xs uppercase tracking-wide"
  >
    Parameters
  </h4>
  <div
    class="rounded-md bg-muted/50"
  >
    <div
      class="relative w-full overflow-hidden rounded-md border bg-base-100 text-base-content"
    >
      <div
        class="relative"
      >
        <pre
          class="overflow-hidden dark:hidden"
          style="background: hsl(var(--background)); color: hsl(var(--foreground)); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
        >
          <code
            class="font-mono text-sm"
            style="white-space: pre;"
          >
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              {
            </span>
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              }
            </span>
          </code>
        </pre>
        <pre
          class="hidden overflow-hidden dark:block"
          style="background: hsl(var(--background)); color: hsl(var(--foreground)); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
        >
          <code
            class="font-mono text-sm"
            style="white-space: pre;"
          >
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              {
            </span>
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              }
            </span>
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolInput > matches snapshot with simple input 1`] = `
<div
  class="space-y-2 overflow-hidden p-4"
>
  <h4
    class="font-medium text-muted-foreground text-xs uppercase tracking-wide"
  >
    Parameters
  </h4>
  <div
    class="rounded-md bg-muted/50"
  >
    <div
      class="relative w-full overflow-hidden rounded-md border bg-base-100 text-base-content"
    >
      <div
        class="relative"
      >
        <pre
          class="overflow-hidden dark:hidden"
          style="background: hsl(var(--background)); color: hsl(var(--foreground)); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
        >
          <code
            class="font-mono text-sm"
            style="white-space: pre;"
          >
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              {
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(228, 86, 73);"
            >
              "param"
            </span>
            <span
              class="token"
              style="color: rgb(64, 121, 242);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(80, 161, 79);"
            >
              "value"
            </span>
            <span>
              

            </span>
            <span />
            <span
              class="token"
              style="color: rgb(56, 58, 66);"
            >
              }
            </span>
          </code>
        </pre>
        <pre
          class="hidden overflow-hidden dark:block"
          style="background: hsl(var(--background)); color: hsl(var(--foreground)); text-shadow: 0 1px rgba(0, 0, 0, 0.3); font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace; direction: ltr; text-align: left; white-space: pre; word-spacing: normal; word-break: normal; line-height: 1.5; tab-size: 2; hyphens: none; padding: 1rem; margin: 0px; overflow: auto; border-radius: 0.3em; font-size: 0.875rem;"
        >
          <code
            class="font-mono text-sm"
            style="white-space: pre;"
          >
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              {
            </span>
            <span>
              

            </span>
            <span>
                
            </span>
            <span
              class="token"
              style="color: rgb(224, 108, 117);"
            >
              "param"
            </span>
            <span
              class="token"
              style="color: rgb(97, 175, 239);"
            >
              :
            </span>
            <span>
               
            </span>
            <span
              class="token"
              style="color: rgb(152, 195, 121);"
            >
              "value"
            </span>
            <span>
              

            </span>
            <span />
            <span
              class="token"
              style="color: rgb(171, 178, 191);"
            >
              }
            </span>
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;
